// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LiDistributionTransaction set withdraw address 1`] = `
<li-transaction-stub
  block="1114"
  color="#F2B134"
  time="1970-01-01T00:00:43.300Z"
>
  <div>
    
      Update withdraw address
    
  </div>
   
  <div>
    
      To cosmos18ymm350peujvq2xy9ymyqj4v34ekvnk3wydrs3
    
  </div>
</li-transaction-stub>
`;

exports[`LiDistributionTransaction withdraw delegation rewards 1`] = `
<li-transaction-stub
  block="1114"
  color="#F2B134"
  time="1970-01-01T00:00:43.300Z"
>
  <div>
    
      Withdraw rewards
    
  </div>
   
  <div>
    
      From 
    <router-link-stub
      to="/validator/cosmosvaloper18ymm350peujvq2xy9ymyqj4v34ekvnk3tsekuz"
    >
      
        cosmosvaloper18ymm350peujvq2xy9ymyqj4v34ekvnk3tsekuz
      
    </router-link-stub>
  </div>
</li-transaction-stub>
`;

exports[`LiDistributionTransaction withdraw validator commission 1`] = `
<li-transaction-stub
  block="1114"
  color="#F2B134"
  time="1970-01-01T00:00:43.300Z"
>
  <div>
    
      Withdraw validator commission
    
  </div>
   
  <div>
    
      From 
    <router-link-stub
      to="/validator/cosmos18ymm350peujvq2xy9ymyqj4v34ekvnk3wydrs3"
    >
      
        cosmos18ymm350peujvq2xy9ymyqj4v34ekvnk3wydrs3
      
    </router-link-stub>
  </div>
</li-transaction-stub>
`;
